src/objects/LRN_Result_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Knowledge_Area__c</fullName>
        <label>Knowledge Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LRN_Result__c</fullName>
        <label>LRN Result</label>
        <referenceTo>LRN_Result__c</referenceTo>
        <relationshipLabel>LRN Result Details</relationshipLabel>
        <relationshipName>LRN_Result_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Num_Correct_Evaluated__c</fullName>
        <label>Num Correct Evaluated</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Correct_Questions__c</fullName>
        <label>Num Correct Questions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Questions_Evaluated__c</fullName>
        <label>Num Questions Evaluated</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Questions__c</fullName>
        <label>Num Questions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proficiency__c</fullName>
        <label>Proficiency</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Evaluated__c</fullName>
        <formula>Num_Correct_Evaluated__c / Num_Questions_Evaluated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Evaluated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Score_Total__c</fullName>
        <formula>Num_Correct_Questions__c / Num_Questions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>LRN Result Detail</label>
    <nameField>
        <displayFormat>ERD-{00000}</displayFormat>
        <label>LRN Result Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LRN Result Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>